# riaps-timesync

./: .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  build.sh  package.sh  version.sh
ChronoCape/: ChronoCape.sch  ChronoCape_BOM.xlsx  README.md
ChronoCape/DeviceTree/: CHRONOCAPE-00A0.dts  build.sh  load.sh
ChronoCape/Firmware/AudioPlay/: .cproject  .mxproject  .project  AudioPlay.cfg  AudioPlay.ioc  AudioPlay.xml  STM32L476RGTx_FLASH.ld  openocd.cfg
ChronoCape/Firmware/AudioPlay/Inc/: stm32l4xx_hal_conf.h  stm32l4xx_it.h  usb_device.h  usbd_conf.h
ChronoCape/Firmware/AudioPlay/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  usb_device.c  usbd_conf.c  usbd_desc.c
ChronoCape/Firmware/Blinky/: .cproject  .custom.cfg  .mxproject  .project  Blinky.cfg  Blinky.ioc  Blinky.xml
ChronoCape/Firmware/Blinky/Inc/: mxconstants.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
ChronoCape/Firmware/Blinky/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  usbd_conf.c
ChronoCape/Firmware/GPSBridge/: .cproject  .mxproject  .project  GPSBridge.cfg  GPSBridge.ioc  GPSBridge.xml  STM32L476RGTx_FLASH.ld
ChronoCape/Firmware/GPSBridge/Inc/: main.h  mxconstants.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
ChronoCape/Firmware/GPSBridge/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
ChronoCape/Firmware/RefClock/: .cproject  .custom.cfg  .mxproject  .project  RefClock.cfg  RefClock.ioc  RefClock.xml  STM32L476RGTx_FLASH.ld
ChronoCape/Firmware/RefClock/Inc/: mxconstants.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
ChronoCape/Firmware/RefClock/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
ChronoCape/Misc/: ChronoCape_logo.ai
ChronoCape/STM32CubeMX/: ChronoCape.ioc
ChronoCape/Signoff/ChronoCape_RevA/: ChronoCape_RevA.boardoutline.ger  ChronoCape_RevA.bottomlayer.ger  ChronoCape_RevA.bottomsilkscreen.ger  ChronoCape_RevA.bottomsoldermask.ger  ChronoCape_RevA.brd  ChronoCape_RevA.drills.dri  ChronoCape_RevA.drills.xln  ChronoCape_RevA.gwk  ChronoCape_RevA.internalplane1.ger  ChronoCape_RevA.internalplane2.ger  ChronoCape_RevA.tcream.ger  ChronoCape_RevA.toplayer.ger  ChronoCape_RevA.topsilkscreen.ger  ChronoCape_RevA.topsoldermask.ger  ChronoCape_RevA_centroid.csv  README.txt
DEBIAN/: postinst  postrm  riaps-timesync-amd64.control  riaps-timesync-armhf.control
config/etc/chrony/: chrony.conf
config/etc/default/: capemgr  gpsd
config/etc/rsyslog.d/: 90-riaps-timesynch.conf
config/lib/systemd/system/: ptp4l.service
doc/: Doxyfile
doc/sphinx/: conf.py  index.rst
python/: CMakeLists.txt  setup.py  setup.py.in
src/: CMakeLists.txt  chrony.c  chrony.h  riaps_ts.c  riaps_ts.h  test.c  test_timesync.c
test/initial_report/: initial_report.ipynb  integration_test.csv
test/python_benchmark/: README.md  bbb.json  desktop.json  odroid-xu4.json  speed.py  vm.json
timesync/: timesyncctl  timesyncd
timesync/config/: master.hooks  master.services  ntp-standalone.hooks  ntp-standalone.services  standalone.services
timesync/config/common/: chrony-ntp.conf  chrony.conf
timesync/config/ntp-master.root/etc/default/: capemgr
tools/: Makefile  analog_gen.c  chrony-socat.c  chrony_socat.c  gpio_timing.c  posix_clocks.c  ppm_gen.c  pps_gen.c
tools/sync_gen/: Makefile  sync_gen.c
tsman/: tsman
tsman/config/: gps-master.hooks  gps-master.services  master.hooks  master.services  ntp-master.hooks  ntp-master.services  slave.services
tsman/config/common/: chrony-gps.conf  phc2sys.service  ptp4l-slave.conf  riaps-timesync.logrotate
tsman/config/gps-master.root/etc/chrony/: chrony.conf
tsman/config/ntp-standalone.root/etc/chrony/: chrony.conf
